# ZTDicom

./: CMakeLists.txt  README.md
include/: addColor.h  addPackage.h  addPatient.h  addPiecewise.h  login.h  mainwindow.h  myTcpsocket.h  objPicker.h  pointPicker.h  polyPicker.h  volumeClass.h
resource/: addColor.ui  addPackage.ui  addPatient.ui  addPiecewise.ui  image.qrc  login.ui  window.qss  window.ui
server/: mainwindow.cpp  mainwindow.h  mainwindow.ui  servertest.pro
src/: CMakeLists.txt  addColor.cxx  addPackage.cxx  addPatient.cxx  addPiecewise.cxx  login.cxx  main.cxx  mainwindow.cxx  myTcpsocket.cxx
