CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
IF(POLICY CMP0020)
  cmake_policy(SET CMP0020 NEW)
ENDIF()

IF(POLICY CMP0043)
  cmake_policy(SET CMP0043 NEW)
ENDIF()

PROJECT(ZTDicom)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/resource)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(src)


