CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
IF(POLICY CMP0020)
  cmake_policy(SET CMP0020 NEW)
ENDIF()

IF(POLICY CMP0043)
  cmake_policy(SET CMP0043 NEW)
ENDIF()

SET(CMAKE_BUILD_TYPE Release)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

SET(CMAKE_AUTOMOC ON)
FIND_PACKAGE(Qt5Widgets REQUIRED QUIET)
FIND_PACKAGE(Qt5Sql REQUIRED)
FIND_PACKAGE(Qt5Network REQUIRED)

file(GLOB UI_FILES ${PROJECT_SOURCE_DIR}/resource/*.ui)
file(GLOB QT_WRAP ${PROJECT_SOURCE_DIR}/include/*.h)
file(GLOB CXX_FILES ${PROJECT_SOURCE_DIR}/src/*.cxx)
file(GLOB QRC_FILES ${PROJECT_SOURCE_DIR}/resource/*.qrc)

QT5_WRAP_UI(UISrcs ${UI_FILES} )

ADD_EXECUTABLE(main MACOSX_BUNDLE
                                ${CXX_FILES} ${UISrcs} ${QT_WRAP} ${QRC_FILES})

QT5_USE_MODULES(main Core Gui Sql Network)

TARGET_LINK_LIBRARIES(main ${VTK_LIBRARIES})